@@ -11,4 +11,10 @@
 		<problem>P/Invoke methods should not be visible outside the assembly.</problem>
 		<solution>Don't direcly export p/invoke. Wrap them in a class and provide adequate parameter validations.</solution>
 	</rule>
+	<rule	Name="UseManagedAlternativesToPInvokeRule" 
+		Type="Gendarme.Rules.Interoperability.PInvokeShouldNotBeVisibleRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
+		Uri="" >
+		<problem>Method {0} contains a P/Invoke call that could be replaced with a managed call.</problem>
+		<solution>Try to avoid p/invoke and replace this call with it's managed alternative.</solution>
+	</rule>
 </rules>
